force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <description>Use for report</description>
    <formula>SBQQ__Quote__r.SBQQ__Account__r.Account_ID_18_character__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Use for report</inlineHelpText>
    <label>Account ID 18 Character</label>
    <type>Text</type>
</CustomField>