force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>use for report</description>
    <formula>SBQQ__Quote__r.SBQQ__Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>use for report</inlineHelpText>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>