force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Actual_Invoiced_TEMPORARY__c.field-meta.xml
<CustomField>
    <fullName>Actual_Invoiced_TEMPORARY__c</fullName>
    <formula>SBQQ__ProrateMultiplier__c *  Customer_ACV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Invoiced - TEMPORARY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>