force-app/main/default/objects/SBQQ__QuoteLine__c/fields/ACV_for_calculation__c.field-meta.xml
<CustomField>
    <fullName>ACV_for_calculation__c</fullName>
    <description>- in case of calculation needed, ACV used to avoid currency issues.</description>
    <formula>Customer_ACV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACV for calculation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>