force-app/main/default/objects/SBQQ__QuoteLine__c/fields/ACV_Unit__c.field-meta.xml
<CustomField>
    <fullName>ACV_Unit__c</fullName>
    <description>ACV / Quantity (All discounts considered)</description>
    <formula>Yearly_Order_Value__c  /  SBQQ__Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculates the average annual price per student.</inlineHelpText>
    <label>Annual Price per Student</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>