force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Amendment_Amount_Variance_QL__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Amount_Variance_QL__c</fullName>
    <formula>Partner_ACV__c + Upgraded_Subscription_Special_Price__c</formula>
    <label>Amendment Amount Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>