force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Auto_Renewal_QL_from_Sub__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renewal_QL_from_Sub__c</fullName>
    <formula>SBQQ__RenewedSubscription__r.Auto_Renewal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auto Renewal (QL from Sub)</label>
    <type>Checkbox</type>
</CustomField>