force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Bundle2__c.field-meta.xml
<CustomField>
    <fullName>Bundle2__c</fullName>
    <label>Level</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Svenska</fullName>
            </value>
            <value>
                <fullName>Engelska</fullName>
            </value>
            <value>
                <fullName>SO</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
            <value>
                <fullName>Quiz</fullName>
            </value>
            <value>
                <fullName>Naturfagspakken</fullName>
            </value>
            <value>
                <fullName>Kulturfagspakken</fullName>
            </value>
            <value>
                <fullName>Sprogfaspakken</fullName>
            </value>
            <value>
                <fullName>Dansk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>