force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Clio_Auto_Calculated_Terms__c.field-meta.xml
<CustomField>
    <fullName>Clio_Auto_Calculated_Terms__c</fullName>
    <description>Field created to calculate the terms when the sales enters manually &quot;start date&quot; - &quot;End Date&quot;</description>
    <formula>SBQQ__ProrateMultiplier__c * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Subscriptions Terms calculated by the Start &amp; End Date manually entered. 
For information only.</inlineHelpText>
    <label>Auto Calculated Terms</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>