force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Clio_Discount_per_Year__c.field-meta.xml
<CustomField>
    <fullName>Clio_Discount_per_Year__c</fullName>
    <description>Hidden, used to calculate the discount / per year, visible on the quote and quote template</description>
    <formula>IF(SBQQ__ProrateMultiplier__c &gt;1, ( SBQQ__AdditionalDiscount__c / SBQQ__ProrateMultiplier__c ) , SBQQ__AdditionalDiscount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount per Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>