force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Clio_List_Price_per_Year__c.field-meta.xml
<CustomField>
    <fullName>Clio_List_Price_per_Year__c</fullName>
    <description>Field hidden and used to calculate the pRice per year (bfore discount)</description>
    <formula>IF(SBQQ__ProrateMultiplier__c &gt;1, (SBQQ__ListTotal__c / SBQQ__ProrateMultiplier__c ) , SBQQ__ListTotal__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>List Total per Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>