force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Customer_ACV__c.field-meta.xml
<CustomField>
    <fullName>Customer_ACV__c</fullName>
    <description>Annual Contract Value (all discount considered)</description>
    <formula>IF(SBQQ__ProrateMultiplier__c &gt;=1, ( Customer_Price_per_Year_WF__c ) ,
Customer_Price_per_Year_WF__c *  SBQQ__ProrateMultiplier__c  )</formula>
    <inlineHelpText>Term &lt; 12 months: Shows value of the actual term (i.e. if deal is for 9 month, it will show the 9 month value)
Term &gt; or = 12 months: Shows the 12 month contracted value only (i.e. if deal is 36 month, it will show the 12 month value).</inlineHelpText>
    <label>Customer ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>