force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Customer_Discount__c.field-meta.xml
<CustomField>
    <fullName>Customer_Discount__c</fullName>
    <formula>If(
Customer_ACV__c != 0, (1 - ( Customer_ACV__c /  List_ACV__c )),
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Discount %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>