force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Customer_Unit_Price_per_Year__c.field-meta.xml
<CustomField>
    <fullName>Customer_Unit_Price_per_Year__c</fullName>
    <description>Used for Läromedia order confirmation email.</description>
    <formula>If(
SBQQ__Quantity__c !=0, Customer_ACV__c /   SBQQ__Quantity__c, 
Customer_ACV__c /  SBQQ__EffectiveQuantity__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Unit Price per Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>