force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Default_Discount__c.field-meta.xml
<CustomField>
    <fullName>Default_Discount__c</fullName>
    <description>- Reflect the Discounts given by Discount Schedule applied on Products Terms Discount Schedules</description>
    <formula>SBQQ__TermDiscountTier__r.SBQQ__Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>