force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Delivery_Account__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Account__c</fullName>
    <formula>SBQQ__Group__r.Delivery_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Account</label>
    <type>Text</type>
</CustomField>