force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Difference_To_Invoice_TEMPORARY__c.field-meta.xml
<CustomField>
    <fullName>Difference_To_Invoice_TEMPORARY__c</fullName>
    <formula>Customer_ACV__c * (1 -  SBQQ__ProrateMultiplier__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Difference To Invoice - TEMPORARY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>