force-app/main/default/objects/SBQQ__QuoteLine__c/fields/DKK_Prorate_Disc_Amt_applied__c.field-meta.xml
<CustomField>
    <fullName>DKK_Prorate_Disc_Amt_applied__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This box is checked if the Price Rule &quot;Prorate Discount Amount and % for Renewal - List Price&quot; applied, and the % Discount populated on the QL can be changed afterwards.</description>
    <inlineHelpText>This box is checked if the Price Rule &quot;Prorate Discount Amount and % for Renewal - List Price&quot; applied, and the % Discount populated on the QL can be changed afterwards.</inlineHelpText>
    <label>DKK - Prorate % Disc. Amt applied</label>
    <type>Checkbox</type>
</CustomField>