force-app/main/default/objects/SBQQ__QuoteLine__c/fields/DKK_Qty_from_account_applied__c.field-meta.xml
<CustomField>
    <fullName>DKK_Qty_from_account_applied__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This box is checked if the Price Rule &quot;QL - DK - Qty from the account&quot; applied, and the Qty of students stored on the account has been populated on the QL level.</description>
    <inlineHelpText>This box is checked if the Price Rule &quot;QL - DK - Qty from the account&quot; applied, and the Qty of students stored on the account has been populated on the QL level.</inlineHelpText>
    <label>DKK - Qty from account applied</label>
    <type>Checkbox</type>
</CustomField>