force-app/main/default/objects/SBQQ__QuoteLine__c/fields/End_Date_for_template__c.field-meta.xml
<CustomField>
    <fullName>End_Date_for_template__c</fullName>
    <description>This field is only used for the Quote Template: it shows the Quote Start - End date when the date has not been choosen manually by the user on the Quioe Line level (see in the Quote Line editor)</description>
    <formula>IF(ISBLANK( SBQQ__EndDate__c ), SBQQ__Quote__r.SBQQ__EndDate__c ,SBQQ__EndDate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date for template</label>
    <type>Date</type>
</CustomField>