force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Fluido_List_ACV_Price_Rule__c.field-meta.xml
<CustomField>
    <fullName>Fluido_List_ACV_Price_Rule__c</fullName>
    <label>Fluido - List ACV - Price Rule</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>