force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Fluido_Partner_ACV_Price_Rule__c.field-meta.xml
<CustomField>
    <fullName>Fluido_Partner_ACV_Price_Rule__c</fullName>
    <label>Fluido - Partner ACV - Price Rule</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>