force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Line_Special_Price_Custom__c.field-meta.xml
<CustomField>
    <fullName>Line_Special_Price_Custom__c</fullName>
    <label>Line Special Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>