force-app/main/default/objects/SBQQ__QuoteLine__c/fields/List_Yearly_Order_Value__c.field-meta.xml
<CustomField>
    <fullName>List_Yearly_Order_Value__c</fullName>
    <formula>IF( ISPICKVAL (SBQQ__PricingMethod__c, &apos;List&apos;), SBQQ__EffectiveQuantity__c * SBQQ__ListPrice__c ,
IF( ISPICKVAL (SBQQ__PricingMethod__c, &apos;Block&apos;), SBQQ__ListPrice__c ,
ROUND (SBQQ__ListTotal__c,2) / ROUND (SBQQ__ProrateMultiplier__c,4)
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>List Yearly Order Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>