force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Migrated_Subscription_Id__c.field-meta.xml
<CustomField>
    <fullName>Migrated_Subscription_Id__c</fullName>
    <formula>SBQQ__UpgradedSubscription__r.Clio_Migrated_Subscription_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Migrated Subscription Id</label>
    <type>Text</type>
</CustomField>