force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Minimum_Price_Active__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Price_Active__c</fullName>
    <formula>IF(
OR(
AND(
SBQQ__Quantity__c &gt; 0,
Clio_MinimumPrice__c &gt; 0,
(SBQQ__OriginalPrice__c * SBQQ__Quantity__c) &lt; Clio_MinimumPrice__c),
AND(
SBQQ__Quantity__c = 0,
Clio_MinimumPrice__c &gt; 0,
(SBQQ__OriginalPrice__c * SBQQ__Quantity__c*-1) &lt; Clio_MinimumPrice__c)
),TRUE,
FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minimum Price Active</label>
    <type>Checkbox</type>
</CustomField>