force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Opportunity_Stage_QL__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage_QL__c</fullName>
    <formula>SBQQ__Quote__r.Opportunity_Stage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Stage QL</label>
    <type>Text</type>
</CustomField>