force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Opportunity_Type_QL__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type_QL__c</fullName>
    <formula>SBQQ__Quote__r.Opportunity_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Type QL</label>
    <type>Text</type>
</CustomField>