force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Opportunity_Won__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Won__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opportunity Won</label>
    <type>Checkbox</type>
</CustomField>