force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Option_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Option_Product_Code__c</fullName>
    <description>Twin field from Product option, used for Product and Price rules for Mixa Maxa Bundle</description>
    <label>Option Product Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>