force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Partner_ACV__c.field-meta.xml
<CustomField>
    <fullName>Partner_ACV__c</fullName>
    <formula>IF(SBQQ__ProrateMultiplier__c &gt;=1, ( Partner_Price_per_Year_WF__c ) ,
Partner_Price_per_Year_WF__c *  SBQQ__ProrateMultiplier__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>