force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Partner_ACV_Discount__c.field-meta.xml
<CustomField>
    <fullName>Partner_ACV_Discount__c</fullName>
    <formula>List_ACV__c - Partner_ACV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner ACV Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>