force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Partner_Discount__c.field-meta.xml
<CustomField>
    <fullName>Partner_Discount__c</fullName>
    <formula>If(
Partner_ACV__c != 0, (1 - ( Partner_ACV__c /  Customer_ACV__c )),
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Discount %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>