force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Partner_Discount_Amt__c.field-meta.xml
<CustomField>
    <fullName>Partner_Discount_Amt__c</fullName>
    <formula>(SBQQ__CustomerPrice__c - SBQQ__PartnerPrice__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Discount (Amt.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>