force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Partner_Price_per_Year_WF__c.field-meta.xml
<CustomField>
    <fullName>Partner_Price_per_Year_WF__c</fullName>
    <description>Field populated by Workflow: &quot;Update QL Annual Calculations&quot;</description>
    <label>Partner Price per Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>