force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Partner_Total_per_Year__c.field-meta.xml
<CustomField>
    <fullName>Partner_Total_per_Year__c</fullName>
    <formula>List_Price_per_Year_WF__c * ( 1 -  Total_Discount_incl_Partner__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Total per Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>