force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Partner_Unit_Price_per_Year__c.field-meta.xml
<CustomField>
    <fullName>Partner_Unit_Price_per_Year__c</fullName>
    <description>Used for Läromedia Order Confirmation</description>
    <formula>If(
SBQQ__Quantity__c !=0, Partner_ACV__c / SBQQ__Quantity__c,
Partner_ACV__c / SBQQ__EffectiveQuantity__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Unit Price per Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>