force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Price_Rule_1__c.field-meta.xml
<CustomField>
    <fullName>Price_Rule_1__c</fullName>
    <label>Price Rule 1</label>
    <length>5</length>
    <type>Text</type>
</CustomField>