force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Price_Rule_2__c.field-meta.xml
<CustomField>
    <fullName>Price_Rule_2__c</fullName>
    <label>Price Rule 2</label>
    <length>5</length>
    <type>Text</type>
</CustomField>