force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Pricing_Method_Product__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Method_Product__c</fullName>
    <formula>TEXT (SBQQ__Product__r.SBQQ__PricingMethod__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pricing Method (Product)</label>
    <type>Text</type>
</CustomField>