force-app/main/default/objects/SBQQ__QuoteLine__c/fields/QL_Start_Date_is_Correct__c.field-meta.xml
<CustomField>
    <fullName>QL_Start_Date_is_Correct__c</fullName>
    <description>This field is used in the Product Rule so that QL Start date is ulterior to Quote Start Date. 
Not used on layout or QLE.</description>
    <formula>IF(SBQQ__StartDate__c &gt;= SBQQ__Quote__r.SBQQ__StartDate__c, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QL Start Date is Correct</label>
    <type>Checkbox</type>
</CustomField>