force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Quantity_not_Zero_is_true__c.field-meta.xml
<CustomField>
    <fullName>Quantity_not_Zero_is_true__c</fullName>
    <description>USed for Quote Template and Condition Printing</description>
    <formula>IF( SBQQ__Quantity__c  = 0,false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity not Zero is true</label>
    <type>Checkbox</type>
</CustomField>