force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Relevant_Grade__c.field-meta.xml
<CustomField>
    <fullName>Relevant_Grade__c</fullName>
    <description>Relevant Grade from Products</description>
    <formula>SBQQ__Product__r.Relevant_Grade__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Relevant Grade from Products</inlineHelpText>
    <label>Relevant Grade</label>
    <type>Text</type>
</CustomField>