force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Relevant_Grade_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Relevant_Grade_Picklist__c</fullName>
    <description>Twin field &quot;Relevant_Grade_Picklist__c&quot; from Product</description>
    <inlineHelpText>Twin field &quot;Relevant_Grade_Picklist__c&quot; from Product</inlineHelpText>
    <label>Relevant_Grade_Picklist</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grade 0</fullName>
            </value>
            <value>
                <fullName>Grade 1</fullName>
            </value>
            <value>
                <fullName>Grade 2</fullName>
            </value>
            <value>
                <fullName>Grade 3</fullName>
            </value>
            <value>
                <fullName>Grade 4</fullName>
            </value>
            <value>
                <fullName>Grade 5</fullName>
            </value>
            <value>
                <fullName>Grade 6</fullName>
            </value>
            <value>
                <fullName>Grade 7</fullName>
            </value>
            <value>
                <fullName>Grade 8</fullName>
            </value>
            <value>
                <fullName>Grade 9</fullName>
            </value>
            <value>
                <fullName>Grade 10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>