force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Renewal_Amount_Variance_QL__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Amount_Variance_QL__c</fullName>
    <description>Difference between previous ACV and current Partner ACV</description>
    <formula>IF( 
    SBQQ__RenewedSubscription__c != &quot;&quot;,
    Partner_ACV__c - Renewed_Subscription_ACV__c,
   0)</formula>
    <inlineHelpText>Difference between previous ACV and current Partner ACV</inlineHelpText>
    <label>Renewal Amount Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>