force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Renewed_Subscription_ACV__c.field-meta.xml
<CustomField>
    <fullName>Renewed_Subscription_ACV__c</fullName>
    <formula>SBQQ__RenewedSubscription__r.Subscription_ACV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewed Subscription - ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>