force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Renewed_Subscription_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewed_Subscription_End_Date__c</fullName>
    <formula>SBQQ__RenewedSubscription__r.SBQQ__EndDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewed Subscription - End Date</label>
    <type>Date</type>
</CustomField>