force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Renewed_Subscription_ID__c.field-meta.xml
<CustomField>
    <fullName>Renewed_Subscription_ID__c</fullName>
    <formula>SBQQ__RenewedSubscription__r.Subscription_ID_18_character__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewed Subscription ID</label>
    <type>Text</type>
</CustomField>