force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Special_Price_Type_drawer__c.field-meta.xml
<CustomField>
    <fullName>Special_Price_Type_drawer__c</fullName>
    <description>This field only reflect the Special Price Type Standard field</description>
    <formula>CASE(SBQQ__SpecialPriceType__c , &quot;Custom&quot;, &quot;Custom&quot;, &quot;Contracted Price&quot;, &quot;Contracted Price&quot;, &quot;Renewal&quot;, &quot;Renewal&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Special Price Type</label>
    <type>Text</type>
</CustomField>