force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Start_Date_for_Template__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_for_Template__c</fullName>
    <description>This field is only used for the Quote Template: it shows the Quote Start - End date when the date has not been choosen manually by the user on the Quite Line level (see in the Quite Line editor)</description>
    <formula>IF(ISBLANK( SBQQ__StartDate__c ), SBQQ__Quote__r.SBQQ__StartDate__c ,SBQQ__StartDate__c )</formula>
    <label>Start Date for Template</label>
    <type>Date</type>
</CustomField>