force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Subscription_Is_Renewed__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Is_Renewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subscription Is Renewed</label>
    <type>Checkbox</type>
</CustomField>